tests/resource/valid/function/function_with_defaults.mamba
def my_fun(a: Int, b: Int := 10, c: Str := "Hello") -> Str => c + b + a

my_fun(1, 2, "hello world")
my_fun(1, 2)
my_fun(1)
