tests/resource/invalid/type/class/compound_field.mamba
class MyClass
    def a: Int := 10
    def b: Int := self.a + 1

def my_class := MyClass()
